<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@color/white">
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/fondo" android:id="@+id/imageView13"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="fitEnd" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/imageView2" app:layout_constraintVertical_bias="0.53"/>
    <TextView
            android:text="@string/mode_bt"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView"
            android:elevation="15dp"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:textAlignment="center" android:textSize="20sp"
            android:background="@color/chapingoPrimaryDark" android:textColor="#FFFFFF"
            android:fontFamily="sans-serif-black"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/spinnerTempo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center" android:minHeight="48dp"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintBottom_toBottomOf="@+id/imageView13" app:layout_constraintHorizontal_bias="0.534"
            tools:ignore="SpeakableTextPresentCheck" app:layout_constraintVertical_bias="0.457"/>
    <Button
            android:text="@string/temp_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnTempo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:background="@drawable/rounded_button2"
            app:layout_constraintTop_toBottomOf="@+id/spinnerTempo" android:layout_marginTop="72dp"
            app:layout_constraintHorizontal_bias="0.504"
            android:onClick="onClickTempo" android:fontFamily="sans-serif-black"/>
    <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp" app:srcCompat="@drawable/uach" android:id="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
            android:layout_width="150dp"
            android:layout_height="100dp" app:srcCompat="@drawable/dgit" android:id="@+id/imageView2"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/version"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            android:elevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:textColor="@color/black"
            android:textAlignment="textEnd" app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
            android:layout_width="60dp"
            android:layout_height="100dp" app:srcCompat="@drawable/bluetooth_ico" android:id="@+id/imageView9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/btnTempo" app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.435"/>
    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp" app:srcCompat="@drawable/volver" android:id="@+id/imageBack"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/imageView2" app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/btnTempo" android:onClick="onClickBack"
            tools:ignore="SpeakableTextPresentCheck"/>
    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/switchEstado"
            app:layout_constraintTop_toBottomOf="@+id/textEstado"
            app:layout_constraintStart_toStartOf="@+id/textEstado"
            android:onClick="onClickEstado" app:layout_constraintEnd_toEndOf="@+id/textEstado" android:minWidth="48dp"
            android:minHeight="48dp"/>
    <TextView
            android:text="@string/desactivado"
            android:layout_width="0dp"
            android:paddingBottom="15dp"
            android:layout_height="wrap_content" android:id="@+id/textEstado"
            app:layout_constraintBottom_toBottomOf="@+id/imageView" android:textColor="@color/black"
            android:textAlignment="center" app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/spinnerTempo"
            app:layout_constraintStart_toStartOf="@+id/imageView9"
            android:textSize="24sp"
            android:textStyle="bold" android:fontFamily="sans-serif-black"/>
    <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp" app:srcCompat="@drawable/logo" android:id="@+id/imageView3"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>